--- a/forms.html
+++ b/forms.html
@@ -9,11 +9,7 @@
         <link rel="stylesheet" href="" type="text/css">
     </head>
     <body>
-    <form class="" action="index.html" method="post">
-
-    </form>
-
-
+    <h1 style="">This is A from</h1>
 
 
     </body>
