--- a/forms.html
+++ b/forms.html
@@ -1,16 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="" type="text/css">
-    </head>
-    <body>
-    <h1 style="">This is A from</h1>
 
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title></title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="" type="text/css">
+</head>
 
-    </body>
+<body style="font-family: Candara;">
+    <h1 style="text-align: center;">This is A from</h1>
+    <form action="">
+        First Name: <input type="text"><br>
+        Last Name : <input type="text"><br>
+        Email : <input type="email" name="" required><br>
+        Birthday : <input type="date" name="" id=""><br>
+        Gender: <input type="radio" name="gender"> Male <input type="radio" name="gender">Female
+        <br>
+         
+        <input type="submit" value="Register !">
+        <input type="reset" value="Reset">
+
+    </form>
+
+</body>
+
 </html>
