--- a/forms.html
+++ b/forms.html
@@ -25,7 +25,8 @@
         <span class="side-label">First Name:</span> <input type="text" name="firstname"><br>
         <span class="side-label">Last Name :</span> <input type="text" name="lastname"><br>
         <span class="side-label">Email :</span> <input type="email" name="email" required><br>
-        <span class="side-label">password :</span> <input type="password" name="password" id=""> <br>
+        <span class="side-label">password :</span> <input type="password" name="password" id=""  min="8"> <br> 
+        <!-- min and max for number of required character -->
         <span class="side-label">Birthday :</span> <input type="date" name="birthday" id=""><br>
         <span class="side-label">Gender :</span> <input type="radio" name="gender" va> Male <input type="radio"
             name="gender">Female
