--- a/landing_page.html
+++ b/landing_page.html
@@ -9,7 +9,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Sematics Tags</title>
+    <title>Agarwal Studio</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="landing_page.css" type="text/css">
@@ -25,7 +25,7 @@
     <nav style="display: flex; justify-content:space-evenly;">
 
         <!-- <div style="display: flex;justify-content: space-evenly;"> -->
-        <h1 style="flex: 1; float: left;margin: 0;">Agarwal Studio</h1>
+        <h1 id="title" style="flex: 1; float: left;margin: 0;">Agarwal Studio</h1>
         <div style="flex: 2;display: flex ; justify-content: space-evenly;">
             <a href="#" class="nav-link">home</a>
             <a href="#" class="nav-link">contact</a>
