--- a/landing_page.html
+++ b/landing_page.html
@@ -12,6 +12,8 @@
     <title>Agarwal Studio</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="landing_page.css" type="text/css">
 </head>
 
@@ -20,19 +22,35 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
     <header>
-        <h1>Landing Page</h1>
+        <h1 style="font-weight: 200;">Landing Page</h1>
     </header>
     <nav style="display: flex; justify-content:space-evenly;">
 
         <!-- <div style="display: flex;justify-content: space-evenly;"> -->
-        <h1 id="title" style="flex: 1; float: left;margin: 0;">Agarwal Studio</h1>
-        <div style="flex: 2;display: flex ; justify-content: space-evenly;">
+        <h1 id="title" style="flex: 2; float: left;margin: 0;">Agarwal Studio</h1>
+        <div style="flex: 3;display: flex ; justify-content: space-evenly;">
             <a href="#" class="nav-link">home</a>
             <a href="#" class="nav-link">contact</a>
             <a href="#" class="nav-link">about us</a>
         </div>
         <!-- </div> -->
     </nav>
+    <section>
+        <div style="float: left;width: 50%;">
+            <img src="https://i.pinimg.com/originals/06/2b/7f/062b7fb9cfd2a6351f4e0850c1e1ed50.jpg" alt="" width="100%">
+
+        </div>
+        <div style="float: right;width: 50%;">
+            <div style="padding: 20px;">
+                <h2>WHAT WE DO ?</h2>
+                <p>
+                    We create awesome stunning websties,mobile app,
+                </p>
+            </div>
+        </div>
+    </section>
+
+
     <script src="" async defer></script>
 </body>
 
