--- a/landing_page.html
+++ b/landing_page.html
@@ -14,16 +14,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap"
         rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=PT+Sans+Narrow:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="landing_page.css" type="text/css">
+    <link rel="stylesheet" href="fonts/stylesheet.css">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap"
+        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:ital,wght@0,300;0,700;1,300&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
     <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-    <header>
+    <!-- <header>
         <h1 style="font-weight: 200;">Landing Page</h1>
-    </header>
+    </header> -->
     <nav style="display: flex; justify-content:space-evenly;">
 
         <!-- <div style="display: flex;justify-content: space-evenly;"> -->
@@ -35,20 +42,26 @@
         </div>
         <!-- </div> -->
     </nav>
-    <section>
-        <div style="float: left;width: 50%;">
-            <img src="https://i.pinimg.com/originals/06/2b/7f/062b7fb9cfd2a6351f4e0850c1e1ed50.jpg" alt="" width="100%">
+    <div style="padding: 10px;">
+        <section>
+            <div style="float: left;width: 50%;">
+                <img src="https://i.pinimg.com/originals/06/2b/7f/062b7fb9cfd2a6351f4e0850c1e1ed50.jpg" alt=""
+                    width="100%">
 
-        </div>
-        <div style="float: right;width: 50%;">
-            <div style="padding: 20px;">
-                <h2>WHAT WE DO ?</h2>
-                <p>
-                    We create awesome stunning websties,mobile app,
-                </p>
             </div>
-        </div>
-    </section>
+            <div style="float: right;width: 50%;">
+                <div style="padding: 20px;text-align: center;">
+                    <h2 style="text-align: center;font-weight: 300;text-transform: uppercase;">What we do ?</h2>
+                    <p
+                        style=" font-family: 'Montserrat', sans-serif;letter-spacing: -0.5px;font-size: 35px;word-spacing: 5px;text-transform: uppercase;font-weight: 300;">
+                        We create awesome <span
+                            style="font-weight: 600;font-size: 60px;letter-spacing: 2px;">stunning</span> Websties,
+                        Mobile app,
+                    </p>
+                </div>
+            </div>
+        </section>
+    </div>
 
 
     <script src="" async defer></script>
