--- a/landing_page.html
+++ b/landing_page.html
@@ -44,21 +44,25 @@
     </nav>
     <div style="padding: 10px;">
         <section>
-            <div style="float: left;width: 50%;">
+            <div id="image">
                 <img src="https://i.pinimg.com/originals/06/2b/7f/062b7fb9cfd2a6351f4e0850c1e1ed50.jpg" alt=""
                     width="100%">
 
             </div>
-            <div style="float: right;width: 50%;">
+            <div id="desc">
                 <div style="padding: 20px;text-align: center;">
                     <h2 style="text-align: center;font-weight: 300;text-transform: uppercase;">What we do ?</h2>
                     <p
                         style=" font-family: 'Montserrat', sans-serif;letter-spacing: -0.5px;font-size: 35px;word-spacing: 5px;text-transform: uppercase;font-weight: 300;">
                         We create awesome <span
                             style="font-weight: 600;font-size: 60px;letter-spacing: 2px;">stunning</span> Websties,
-                        Mobile app,
+                        Mobile app
                     </p>
                 </div>
+            </div>
+            <div class="button">
+                <hr style="width: 100px;border: 2px solid orange;margin-bottom: 15px;">
+                <button>Join Us</button>
             </div>
         </section>
     </div>
